--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.github.GoodieBag:Pinview:v1.4'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
